// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValue.vue encrypt value prop should render the actual value as it is if not set 1`] = `
Wrapper {
  "selector": ".field-item-value",
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' should render the encrypted value 1`] = `
Wrapper {
  "selector": ".field-item-value",
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' with inspection prop should show the inspect button with the eye icon if set 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' with inspection prop should toggle encrypted value when the inspect button is clicked 1`] = `
Wrapper {
  "selector": ".field-item-value",
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' with inspection prop should toggle encrypted value when the inspect button is clicked 2`] = `
Wrapper {
  "selector": ".field-item-value",
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' with inspection prop should toggle the inspect button icon when the inspect button is clicked 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": ".eye-off-icon",
}
`;

exports[`FieldValue.vue encrypt value prop when set as 'true' with inspection prop should toggle the inspect button icon when the inspect button is clicked 2`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": ".eye-icon",
}
`;

exports[`FieldValue.vue is required prop should append asterik with the title if set 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
}
`;

exports[`FieldValue.vue is required prop should not append asterik with the title if not set 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
}
`;
